--- a/riad.html
+++ b/riad.html
@@ -103,7 +103,7 @@
     "name": "SM Soad",
     "image": "IMG_20240620_151823.jpg",
     "jobTitle": "Developer & Creator",
-    "url": "https://sm-soad.vercel.app",
+    "url": "https://tired-riad.vercel.app",
     "sameAs": [
       "https://www.facebook.com/toxic71soad",
       "https://www.instagram.com/smsoad09"
