--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "SM Soad",
-    "image": "IMG_20240620_151823.jpg",
+    "image": "500037407_122158757018568522_3751839208811282966_n.jpg",
     "jobTitle": "Developer & Creator",
     "url": "https://tired-riad.vercel.app",
     "sameAs": [
@@ -114,7 +114,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="IMG_20240620_151823.jpg" alt="SM Soad" class="profile-pic" />
+    <img src="500037407_122158757018568522_3751839208811282966_n.jpg" alt="SM Soad" class="profile-pic" />
     <h1><span class="typing">SM Soad</span></h1>
     <p>Developer | Creator | Innovator</p>
     <p>আমি একজন ডেভেলপার এবং প্রযুক্তি নিয়ে কাজ করতে ভালোবাসি।</p>
