--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="SM Soad - Developer, Creator and Innovator." />
+  <meta name="description" content="Tired Riad -STUDENT ." />
   <meta name="google-site-verification" content="8RuJkMsMIpGpe1zHFMxY888FvBTNvSFCUhftqn2ksFE" />
-  <title>SM Soad | Official Website</title>
+  <title>Tired Riad | Official Website</title>
 
   <style>
     body {
@@ -100,13 +100,13 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "SM Soad",
+    "name": "Tired Riad",
     "image": "500037407_122158757018568522_3751839208811282966_n.jpg",
-    "jobTitle": "Developer & Creator",
+    "jobTitle": "STUDENT",
     "url": "https://tired-riad.vercel.app",
     "sameAs": [
-      "https://www.facebook.com/toxic71soad",
-      "https://www.instagram.com/smsoad09"
+      "https://www.facebook.com/",
+      "https://www.instagram.com/"
     ]
   }
   </script>
@@ -115,13 +115,13 @@
 <body>
   <div class="container">
     <img src="500037407_122158757018568522_3751839208811282966_n.jpg" alt="SM Soad" class="profile-pic" />
-    <h1><span class="typing">SM Soad</span></h1>
-    <p>Developer | Creator | Innovator</p>
-    <p>আমি একজন ডেভেলপার এবং প্রযুক্তি নিয়ে কাজ করতে ভালোবাসি।</p>
+    <h1><span class="typing">Tired RIad</span></h1>
+    <p>STUDENT SOCIAL SERVICE</p>
+    <p>HEY I AM Tired RIad I am a STUDENT।</p>
     <div class="social-links">
-      <a href="https://facebook.com/toxic71soad" target="_blank" rel="noopener noreferrer">Facebook</a>
-      <a href="https://instagram.com/smsoad09" target="_blank" rel="noopener noreferrer">Instagram</a>
-      <a href="mailto:smsoad85@gmail.com">Email</a>
+      <a href="https://facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a>
+      <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href=".com">Email</a>
     </div>
   </div>
 </body>
