--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     "jobTitle": "STUDENT",
     "url": "https://tired-riad.vercel.app",
     "sameAs": [
-      "https://www.facebook.com/",
-      "https://www.instagram.com/"
+      "https://www.facebook.com/share/1Rs5WXuHVT/",
+      "https://www.instagram.com/xtenriad?igsh=MWk3cHM5djhmYmZjag=="
     ]
   }
   </script>
@@ -117,11 +117,11 @@
     <img src="500037407_122158757018568522_3751839208811282966_n.jpg" alt="SM Soad" class="profile-pic" />
     <h1><span class="typing">Tired RIad</span></h1>
     <p>STUDENT SOCIAL SERVICE</p>
-    <p>HEY I AM Tired RIad I am a STUDENT।</p>
+    <p>HEY I AM Tired RIad I am a STUDENT,Any problem contact my Social Account</p>
     <div class="social-links">
-      <a href="https://facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a>
-      <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
-      <a href=".com">Email</a>
+      <a href="https://www.facebook.com/share/1Rs5WXuHVT/" target="_blank" rel="noopener noreferrer">Facebook</a>
+      <a href="https://www.instagram.com/xtenriad?igsh=MWk3cHM5djhmYmZjag==" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href="riadshak007@gmail.com">Email</a>
     </div>
   </div>
 </body>
