--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Tired Riad -STUDENT ." />
-  <meta name="google-site-verification" content="yyuOTb_kXdvgBJ9NCSGjI_lzb3KgfERb_Fhq2nBnOLY" />
+  <meta name="google-site-verification" content="H0g8ftfsKjcKQpB3UMo5eyLPf2d6rgZSXfv573v_zQk" />" />
   <title>Tired Riad | Official Website</title>
 
   <style>
